<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_grid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="12"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="4"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/df_logo_view"
        android:layout_column="0"
        android:layout_columnSpan="12"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:contentDescription="@string/dwarf_fortress_dwarf_management_logo"
        android:src="@drawable/df_logo"
        android:tag="@string/img_view_tag" />

    <Button
        android:id="@+id/conn_to_DT_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_gravity="center"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:gravity="center"
        android:tag="@string/button_vw_tag"
        android:text="@string/conn_to_DT_btn_txt" />

    <Space
        android:layout_column="5"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_rowSpan="1" />

    <Button
        android:id="@+id/view_dwarf_logs_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="7"
        android:layout_columnSpan="5"
        android:layout_gravity="center"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:onClick="viewDwarfLogs"
        android:tag="@string/button_vw_tag"
        android:text="@string/view_dwarf_logs_btn_txt" />

    <Button
        android:id="@+id/export_dwarf_logs_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_gravity="center"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:onClick="exportDwarves"
        android:tag="@string/button_vw_tag"
        android:text="@string/export_dwarf_logs_btn_txt" />

    <Space
        android:layout_column="5"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:layout_rowSpan="1" />

    <Button
        android:id="@+id/view_world_legends_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="7"
        android:layout_columnSpan="5"
        android:layout_gravity="center"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:tag="@string/button_vw_tag"
        android:text="@string/view_world_legends_btn_txt" />

    <TextView
        android:id="@+id/fine_print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="12"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:contentDescription="@string/dwarf_fortress_title_bar"
        android:drawableTop="@drawable/df_title"
        android:gravity="center"
        android:text="@string/fine_print_text"
        android:textAppearance="?android:attr/textAppearanceLarge" >

    </TextView>

</GridLayout>